	* Improved synth profile handling. When a non-default synth profile is selected in the synth properties dialog,
	  it is now used during synth re-opening (provided that it is pinned or an active MIDI session persists).
	* Added support for SysEx fragments in standard MIDI files played using the internal MIDI player.
	* Added option "Nice Amp Ramp" in the Synth Properties dialog.

2017-04-09:

	1.5.0 released.

	* Updated mt32emu library to version 2.1.0.
	* Moved sample rate conversion feature from mt32emu-qt to the libmt32emu, so it can be easily used in other applications.
	* Added an option to select the renderer type in the synth properties (preserved in the profile).

2016-10-22:

	1.4.0 released.

	* Updated mt32emu library to version 2.0.0.
	* Added support of ALSA raw MIDI ports in ALSA MIDI driver. Configuration option mt32emu-qt_WITH_ALSA_MIDI_DRIVER
	  renamed to mt32emu-qt_WITH_ALSA_MIDI_SEQUENCER for consistency, and is now set to TRUE by default on Linux systems only.
	* Added handling of fragmented SysExes in ALSA MIDI driver.
	* Improved CoreAudio driver: CoreAudioStream no longer renders data in the GUI thread, a dedicated internal AudioQueue thread is used instead.
	* Improved MIDI timing calculations. Introduced MIDI latency autodetection mode (initiated by setting MIDI latency to 0).
	* Added build option mt32emu-qt_WITH_DEBUG_WINCONSOLE. It controls whether a debugging console is shown on Windows.
	* Fixed a bug in LinearResampler that may cause incorrect output at beginning of each audio block.
	* Introduced full-featured internal resampler. The intention is to make resampling less demanding than libsamplerate requires
	  yet to reduce the processing delay libsoxr introduces. That's achieved by taking advantage of oversampled output produced
	  by analog circuit emulation engine and using efficient elliptic low-pass filter instead of FFT-based FIR.