@@ -31,18 +31,24 @@ private:
 
 	void enableControls(bool enable);
 	void loadProfileCombo();
-	const QStringList getMidiFileNames();
-	void addPcmFile(QString proposedPCMFileName);
+	QStringList getMidiFileNames();
+	QStringList showAddMidiFilesDialog();
+	void newPcmFile(const QString &proposedPCMFileName);
+	void newPcmFileGroup(const QStringList &fileNames);
 
 private slots:
+	void on_newPcmButton_clicked();
+	void on_newGroupButton_clicked();
 	void on_addMidiButton_clicked();
-	void on_addPcmButton_clicked();
+	void on_addInitButton_clicked();
+	void on_editPcmButton_clicked();
 	void on_removeButton_clicked();
 	void on_clearButton_clicked();
 	void on_moveUpButton_clicked();
 	void on_moveDownButton_clicked();
 	void on_startButton_clicked();
 	void on_stopButton_clicked();
+	void on_midiList_currentItemChanged(QListWidgetItem *current, QListWidgetItem *previous);
 	void on_pcmList_currentItemChanged(QListWidgetItem *current, QListWidgetItem *previous);
 	void handleConversionFinished();
 	void updateConversionProgress(int midiEventsProcessed, int midiEventsTotal);
